# snitchtt

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  jitpack.yml  settings.gradle.kts
gradle/: libs.versions.toml
sample/: build.gradle.kts  proguard-rules.pro
sample/src/main/: AndroidManifest.xml
sample/src/main/kotlin/ai/snitchtt/sample/: MainActivity.kt  SampleApp.kt  ThreatAdapter.kt
sample/src/main/res/drawable/: ic_launcher_fg.xml
sample/src/main/res/layout/: activity_main.xml  item_threat.xml
sample/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
sample/src/main/res/values/: colors.xml  strings.xml  themes.xml
snitchtt/: build.gradle.kts  consumer-rules.pro
snitchtt/src/main/: AndroidManifest.xml
snitchtt/src/main/cpp/: CMakeLists.txt  adb_native.c  adb_native.h  build_native.c  build_native.h  env_check.c  env_check.h  fd_scan.c  fd_scan.h  frida_detect.c  frida_detect.h  guard_entry.c  hunter_entry.c  lsposed_check.c  lsposed_check.h  maps_scan.c  maps_scan.h  mount_check.c  mount_check.h  obf_macros.h  plt_check.c  plt_check.h  port_probe.c  port_probe.h  root_check.c  root_check.h  snitchtt_jni.c  stack_check.c  stack_check.h  str_enc.h  syscall_utils.h  thread_scan.c  thread_scan.h  timing.c  timing.h
snitchtt/src/main/kotlin/ai/snitchtt/: SnitchConfig.kt  SnitchNative.kt  SnitchProvider.kt  Snitchtt.kt  ThreatFlag.kt  ThreatReport.kt
snitchtt/src/main/kotlin/ai/snitchtt/checks/: AdbCheck.kt  BuildCheck.kt  CertCheck.kt  HmaCheck.kt  NetworkCheck.kt  RootCheck.kt  XposedCheck.kt
